k8s/awesome-media-backend-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: awesome-media-backend-deployment-v'${parameters.new_version}'
  namespace: '${parameters.namespace}'
  labels:
    app: awesome-media-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: awesome-media-backend
  template:
    metadata:
      labels:
        app: awesome-media-backend
        version: '${parameters.new_version}'
    spec:
      containers:
      - name: awesome-media-backend
        image: dtlabs/awesome-media-backend:'${parameters.new_version}'
        ports:
        - containerPort: 8090
        imagePullPolicy: Always
        resources:
          requests:
            memory: 256Mi
            cpu: 50m
          limits:
            memory: 1Gi
            cpu: 500m
