k8s/awesome-media-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: awesome-media-backend-service
  namespace: ${parameters.namespace}
spec:
  ports:
  - name: "http"
    port: 8090
    targetPort: 8090
  selector:
    app: awesome-media-backend
  type: NodePort
